# ROS2-Autonomous-Obstacle-Avoidance-Robot

./: .gitignore  LICENSE  README.md  robot_car_simulation.html  robot_isometric_3d.html
robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ws/install/Robot_Smart_Car/share/Robot_Smart_Car/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/Robot_Smart_Car/share/Robot_Smart_Car/meshes/: caster_wheel_link.STL
robot_ws/install/Robot_Smart_Car/share/Robot_Smart_Car/urdf/: Robot_Smart_Car.urdf
robot_ws/install/motor_package/share/ament_index/resource_index/parent_prefix_path/: motor_package
robot_ws/install/motor_package/share/motor_package/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/obstacle_avoidance/share/obstacle_avoidance/: package.sh  package.xml
robot_ws/install/obstacle_avoidance/share/obstacle_avoidance/cmake/: obstacle_avoidanceConfig.cmake
robot_ws/install/obstacle_package/share/obstacle_package/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/sensor_package/share/sensor_package/: local_setup.sh  package.ps1  package.sh  package.xml
robot_ws/install/sensor_package/share/sensor_package/cmake/: sensor_packageConfig.cmake
robot_ws/log/: latest_build
robot_ws/src/Robot_Smart_Car/: CMakeLists.txt  package.xml
robot_ws/src/Robot_Smart_Car/launch/: display.launch.xml
robot_ws/src/Robot_Smart_Car/meshes/: left_wheel_link.STL  right_wheel_link.STL
robot_ws/src/Robot_Smart_Car/src/: full_sensor_node.cpp
robot_ws/src/Robot_Smart_Car/urdf/: Robot_Smart_Car.csv
robot_ws/src/motor_package/: CMakeLists.txt  package.xml
robot_ws/src/motor_package/src/: motor_node.cpp
robot_ws/src/obstacle_avoidance/: CMakeLists.txt
robot_ws/src/obstacle_avoidance/src/: full_sensor_node.cpp  motor_node.cpp  obstacle_node.cpp  robot_controller_node.cpp
robot_ws/src/obstacle_package/: CMakeLists.txt
robot_ws/src/obstacle_package/src/: obstacle_node.cpp
robot_ws/src/sensor_package/: CMakeLists.txt
robot_ws/src/sensor_package/src/: sensor_node.cpp
