<?xml version="1.0"?>
<package format="3">
  <name>motor_package</name>
  <version>0.0.0</version>
  <description>Motor control interface</description>
  <maintainer email="you@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>